# api-yatube

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
api/: permissions.py  serializers.py  urls.py  views.py
posts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0004_alter_post_author_alter_post_group.py
yatube_api/: settings.py  urls.py
yatube_api/api/: actions.py  hateoas_serializer.py  pagination.py  serializers.py  urls.py  views.py
yatube_api/posts/: models.py
yatube_api/posts/migrations/: 0003_alter_comment_id_alter_follow_id_alter_group_id_and_more.py  0005_rename_author_follow_following_and_more.py
yatube_api/yatube_api/: settings.py  urls.py
