[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "kostya1102m",email = "122353133+kostya1102m@users.noreply.github.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.17.0,<4.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "uritemplate (>=4.2.0,<5.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "djoser (>=2.3.3,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
